--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "eslint-plugin-react": "^7.37.4",
+    "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
+    "nanoid": "^5.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-transition-group": "^4.4.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
